<resources>
    <string name="app_name">Logan Shop Driver Helper</string>
    <string name="title_shift">Смена</string>
    <string name="title_delivery">Записи</string>
    <string name="title_total">Отчёт</string>
    <string name="version">v0.3.5.1</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="date">Дата</string>
    <string name="morning">Утро</string>
    <string name="odo">Пробег</string>
    <string name="fuel">Бензин</string>
    <string name="evening">Вечер</string>
    <string name="writeTo">Записать</string>
    <string name="newShift">Новая смена</string>
    <string name="type">Тип</string>
    <string name="whose">От кого</string>
    <string name="payType">Оплата</string>
    <string name="address">Адрес</string>
    <string name="cost">Сумма</string>
    <string name="comment">Комментарий</string>
    <string name="total_day">Дневной</string>
    <string name="total_month">Месячный</string>
    <string name="car">Машина</string>
    <string name="odo_morning">Пробег утро:</string>
    <string name="odo_evening">Пробег вечер:</string>
    <string name="fuel_morning">Бензин утро:</string>
    <string name="fuel_evening">Бензин вечер:</string>
    <string name="fuel_dividers">дел</string>
    <string name="km">км</string>
    <string name="totalMoney">Общий приход</string>
    <string name="logan_divider">Logan</string>
    <string name="deliveryValue">Кол-во доставок</string>
    <string name="money">Приход</string>
    <string name="cash">Наличные</string>
    <string name="card">Безнал.</string>
    <string name="vesta_divider">Vesta</string>
    <string name="expenses">Расходы</string>
    <string name="target">Цель</string>
    <string name="salary">Начислено:</string>
    <string name="shiftsValue">Количество смен:</string>
    <string name="family">Фамилия</string>
    <string name="recorded">Записано</string>
    <string name="dontForgetDate">Не забудь проставить дату!</string>
    <string name="wrongData">Не верные данные</string>
    <string name="error">Ошибка</string>
    <string name="someError">Неизвестная ошибка. Повторите ещё раз</string>
    <string name="shiftError">Ошибка при загрузке данных. Используются значения по умолчанию</string>
    <string name="adMessage">Удалить?</string>
    <string name="adBtn1">Да</string>
    <string name="adBtn2">Нет</string>
    <string name="totalMoneyCash">Общий нал.:</string>
    <string name="totalMoneyCard">Общий безнал.:</string>
    <string name="dollar">$</string>
    <string name="share">Отправить</string>
    <string name="mid_salary">Средняя:</string>
    <string name="bonus">Бонус</string>
    <string name="move_from">Из</string>
    <string name="move_to">В</string>
    <string name="money_take">Получено</string>
    <string name="tea_money">Чаевые:</string>
    <string name="total_deliveries">Всего доставок</string>
    <string name="total_moves">Перемещения</string>
    <string name="total_tasks">Поручения</string>
    <string name="total_total">Всего:</string>
    <string name="total_money">Заработок</string>
    <string name="wash">Мойка</string>
    <string name="other">Прочее</string>
    <string name="no_salary">Не оплачивается</string>
    <string name="prepay">Аванс</string>
    <string name="car_largus">Largus</string>
    <string name="car_sandero">Sandero</string>
    <string name="car_x_ray">X-Ray</string>
    <string name="car_largusNew">Largus(new)</string>
    <string name="car_vestaSW">VestaSW</string>
    <string name="holiday_pay">Отпускные</string>
    <string name="money_to_recieve">К выплате:</string>
    <string name="pays">Выплаты:</string>
    <string name="maint_export">Экспорт</string>
    <string name="maint_import">Импорт</string>
    <string name="switch_between_shops">Между магазинами</string>
    <string name="switch_else">Прочее</string>
    <string name="shop_sedova">Седова</string>
    <string name="shop_kulturi">Культуры</string>
    <string name="shop_himikov">Химиков</string>
    <string name="shop_zhukova">Жукова</string>
    <string name="shop_veteranov">Ветеранов</string>
    <string name="total_calc_and_save">Отчёт сформирован и записан</string>
    <string name="no_data">Нет записей</string>
    <string name="cashSum">Касса:</string>
    <string name="extraPay">Премия</string>
    <string name="penalty">Штраф</string>
    <string name="delivery">Доставка</string>
    <string name="move">Перемещение</string>
    <string name="task">Поручение</string>
    <string name="expense">Расход</string>
    <string name="pay">Выплата</string>
    <string name="next">Дальше</string>
    <string name="to">Куда</string>
    <string name="from">Откуда</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="isPayed">Оплачивается?</string>
    <string name="isBetweenShops">Между магазинами?</string>
    <string name="dataBase">База данных</string>
    <string name="addingNotes">Добавление записей</string>
    <string name="oldSystem">Старое</string>
    <string name="newSystem">Новое</string>
    <string name="shop_planernaya">Планерная</string>
    <string name="qualityPay">Качество</string>
    <string name="status">Статус</string>
    <string name="driver">Водитель</string>
    <string name="newbie">Стажёр</string>
    <string name="oldAddSystemChosen">Выбрана старая система добавления</string>
    <string name="newAddSystemChosen">Выбрана новая система добавления</string>
    <string name="oldShiftSystemChosen">Выбран старый экран смены</string>
    <string name="newShiftSystemChosen">Выбран новый экран смены</string>
    <string name="driverStatusChosen">Выбран режим водителя</string>
    <string name="newbieStatusChosen">Выбран режим стажёра</string>
    <string name="recordsList">Список записей</string>
    <string name="oldDeliveryListChosen">Выбран старый вид списка записей</string>
    <string name="newDeliveryListChosen">Выбран новый вид списка записей</string>
    <string name="somethingWrong">Упс… Что-то пошло не так…</string>
    <string name="district">Район</string>
    <string name="open_shift">Открыть смену</string>
    <string name="close_shift">Закрыть смену</string>
    <string name="district_north">Север</string>
    <string name="district_center">Центр</string>
    <string name="district_south">Юг</string>
    <string name="_0">0</string>
    <string name="repair">Repair</string>
    <string name="repaired">Данные исправлены</string>
    <string name="shiftScreen">Экран смены</string>
    <string name="oldShiftScreen">Старый</string>
    <string name="newShiftScreen">Новый</string>

    <string-array name="region">
        <item>Север</item>
        <item>Центр</item>
        <item>Юг</item>
        <item>Весь город</item>
    </string-array>
    <string-array name="cars">
        <item>Largus</item>
        <item>Sandero</item>
        <item>LargusN</item>
        <item>VestaSW</item>
    </string-array>
    <string-array name="work_type">
        <item>Доставка</item>
        <item>Перемещение</item>
        <item>Поручение</item>
        <item>Расход</item>
        <item>Прочее</item>
        <item>Выплата</item>
    </string-array>
    <string-array name="salary_type">
        <item>Аванс</item>
        <item>Отпускные</item>
        <item>Премия</item>
        <item>Штраф</item>
        <item>Качество</item>
    </string-array>
    <string-array name="delivery_type">
        <item>Logan</item>
        <item>Vesta</item>
    </string-array>
    <string-array name="payType">
        <item>Наличные</item>
        <item>Карта</item>
    </string-array>
    <string-array name="fuel_6">
        <item>1/6</item>
        <item>2/6</item>
        <item>3/6</item>
        <item>4/6</item>
        <item>5/6</item>
        <item>6/6</item>
    </string-array>
    <string-array name="fuel_8">
        <item>1/8</item>
        <item>2/8</item>
        <item>3/8</item>
        <item>4/8</item>
        <item>5/8</item>
        <item>6/8</item>
        <item>7/8</item>
        <item>8/8</item>
    </string-array>
    <string-array name="fuel_9">
        <item>1/9</item>
        <item>2/9</item>
        <item>3/9</item>
        <item>4/9</item>
        <item>5/9</item>
        <item>6/9</item>
        <item>7/9</item>
        <item>8/9</item>
        <item>9/9</item>
    </string-array>
    <string-array name="shops">
        <item>Жукова</item>
        <item>Культуры</item>
        <item>Седова</item>
        <item>Химиков</item>
        <item>Планерная</item>
        <item>Ветеранов</item>
    </string-array>
    <string-array name="expenses">
        <item>Бензин</item>
        <item>Мойка</item>
        <item>Прочее</item>
    </string-array>
</resources>
