<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context="com.parsiphal.loganshopdriverhelper.fragments.ShiftFragmentNew">
    <LinearLayout
            android:id="@+id/shiftN_family"
            style="@style/shiftLinearLayout">
        <TextView
                android:id="@+id/shiftN_status_textView"
                style="@style/shiftTextViews"/>
        <TextView
                android:id="@+id/shiftN_family_textView"
                style="@style/shiftEditTexts"
                android:hint="@string/family"/>
    </LinearLayout>
    <LinearLayout
            android:id="@+id/shiftN_date_and_car"
            style="@style/shiftLinearLayout"
            android:layout_below="@id/shiftN_family">
        <TextView
                android:id="@+id/shiftN_date_textView"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:hint="@string/date"
                android:textAlignment="center"
                android:textSize="20sp"/>
        <TextView
                android:id="@+id/shiftN_car_textView"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:hint="@string/car"
                android:textAlignment="center"
                android:textSize="20sp"/>
        <TextView
                android:id="@+id/shiftN_district_textView"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:hint="@string/district"
                android:textAlignment="center"
                android:textSize="20sp"/>
    </LinearLayout>
    <LinearLayout
            android:id="@+id/shiftN_morning_divider"
            style="@style/shiftLinearLayout"
            android:layout_below="@id/shiftN_date_and_car">
        <TextView
                style="@style/shiftTextViewDividers"
                android:text="@string/morning"/>
    </LinearLayout>
    <LinearLayout
            android:id="@+id/shiftN_morning_odo"
            style="@style/shiftLinearLayout"
            android:layout_below="@id/shiftN_morning_divider">
        <TextView
                style="@style/shiftEditTexts"
                android:text="@string/odo"/>
        <TextView
                android:id="@+id/shiftN_odo_morning_textView"
                style="@style/shiftEditTexts"
                android:hint="@string/odo"/>
        <TextView
                android:text="@string/km"
                style="@style/shiftTextViews"/>
    </LinearLayout>
    <LinearLayout
            android:id="@+id/shiftN_morning_fuel"
            style="@style/shiftLinearLayout"
            android:layout_below="@id/shiftN_morning_odo">
        <TextView
                android:text="@string/fuel"
                style="@style/shiftEditTexts"/>
        <TextView
                android:id="@+id/shiftN_fuel_morning_textView"
                android:hint="@string/fuel"
                style="@style/shiftEditTexts"/>
        <TextView
                android:text="@string/fuel_dividers"
                style="@style/shiftTextViews"/>
    </LinearLayout>
    <LinearLayout
            android:id="@+id/shiftN_evening_divider"
            style="@style/shiftLinearLayout"
            android:layout_below="@id/shiftN_morning_fuel">
        <TextView
                style="@style/shiftTextViewDividers"
                android:text="@string/evening"/>
    </LinearLayout>
    <LinearLayout
            android:id="@+id/shiftN_evening_odo"
            style="@style/shiftLinearLayout"
            android:layout_below="@id/shiftN_evening_divider">
        <TextView
                style="@style/shiftEditTexts"
                android:text="@string/odo"/>
        <TextView
                android:id="@+id/shiftN_odo_evening_textView"
                style="@style/shiftEditTexts"
                android:hint="@string/odo"/>
        <TextView
                android:text="@string/km"
                style="@style/shiftTextViews"/>
    </LinearLayout>
    <LinearLayout
            android:id="@+id/shiftN_evening_fuel"
            style="@style/shiftLinearLayout"
            android:layout_below="@id/shiftN_evening_odo">
        <TextView
                android:text="@string/fuel"
                style="@style/shiftEditTexts"/>
        <TextView
                android:id="@+id/shiftN_fuel_evening_textView"
                android:hint="@string/fuel"
                style="@style/shiftEditTexts"/>
        <TextView
                android:text="@string/fuel_dividers"
                style="@style/shiftTextViews"/>
    </LinearLayout>
    <LinearLayout
            android:id="@+id/shiftN_buttons"
            style="@style/shiftLinearLayout"
            android:paddingTop="30dp"
            android:layout_below="@id/shiftN_evening_fuel">
        <Button
                android:id="@+id/shiftN_start_shift_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/open_shift"/>
        <Button
                android:id="@+id/shiftN_finish_shift_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/close_shift"/>
    </LinearLayout>
    <LinearLayout
            android:id="@+id/shiftN_enter_family"
            style="@style/shiftLinearLayout"
            android:paddingTop="50dp"
            android:orientation="vertical"
            android:layout_below="@id/shiftN_buttons"
            android:visibility="gone">
        <EditText
                android:id="@+id/shiftN_enter_family_editText"
                style="@style/shiftEditTexts"
                android:layout_width="match_parent"
                android:hint="@string/family"
                android:inputType="text"/>
        <Button
                android:id="@+id/shiftN_enter_family_write_button"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/writeTo"/>
    </LinearLayout>
    <LinearLayout
            android:id="@+id/shiftN_enter_date"
            style="@style/shiftLinearLayout"
            android:paddingTop="50dp"
            android:orientation="vertical"
            android:layout_below="@id/shiftN_enter_family"
            android:visibility="gone">
        <DatePicker
                android:id="@+id/shiftN_enter_date_datePicker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:datePickerMode="spinner"
                android:calendarViewShown="false"/>
        <Button
                android:id="@+id/shiftN_enter_date_next_button"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/next"/>
    </LinearLayout>
    <LinearLayout
            android:id="@+id/shiftN_enter_car"
            style="@style/shiftLinearLayout"
            android:paddingTop="50dp"
            android:orientation="vertical"
            android:layout_below="@id/shiftN_enter_date"
            android:visibility="gone">
        <TextView
                style="@style/shiftTextViews"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/car"/>
        <LinearLayout
                style="@style/shiftLinearLayout"
                android:orientation="horizontal">
            <Button
                    android:id="@+id/shiftN_enter_car_largus_button"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/car_largus"/>
            <Button
                    android:id="@+id/shiftN_enter_car_sandero_button"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/car_sandero"/>
            <Button
                    android:id="@+id/shiftN_enter_car_xray_button"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/car_x_ray"
                    android:visibility="gone"/>
            <Button
                    android:id="@+id/shiftN_enter_car_largusNew_button"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/car_largusNew"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
            android:id="@+id/shiftN_enter_district"
            style="@style/shiftLinearLayout"
            android:paddingTop="50dp"
            android:orientation="vertical"
            android:layout_below="@id/shiftN_enter_car"
            android:visibility="gone">
        <TextView
                style="@style/shiftTextViews"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/district"/>
        <LinearLayout
                style="@style/shiftLinearLayout"
                android:orientation="horizontal">
            <Button
                    android:id="@+id/shiftN_enter_district_north_button"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/district_north"/>
            <Button
                    android:id="@+id/shiftN_enter_district_center_button"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/district_center"/>
            <Button
                    android:id="@+id/shiftN_enter_district_south_button"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/district_south"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
            android:id="@+id/shiftN_enter_odo_and_fuel"
            style="@style/shiftLinearLayout"
            android:paddingTop="50dp"
            android:orientation="vertical"
            android:layout_below="@id/shiftN_enter_district"
            android:visibility="gone">
        <EditText
                android:id="@+id/shiftN_odo_editText"
                style="@style/shiftTextViewDividers"
                android:textSize="20sp"
                android:hint="@string/odo"
                android:inputType="numberDecimal"/>
        <LinearLayout
                style="@style/shiftLinearLayout">
            <TextView
                    style="@style/shiftTextViews"
                    android:text="@string/fuel"/>
            <TextView
                    android:id="@+id/shiftN_fuel_textView"
                    style="@style/shiftTextViews"
                    android:text="@string/_0"/>
        </LinearLayout>
        <SeekBar
                android:id="@+id/shiftN_fuel_seekbar_8"
                android:paddingTop="30dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:progress="0"
                android:max="8"/>
        <SeekBar
                android:id="@+id/shiftN_fuel_seekbar_9"
                android:paddingTop="30dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:progress="0"
                android:max="9"/>
        <Button
                android:id="@+id/shiftN_enter_odo_and_fuel_write_button"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/writeTo"/>
    </LinearLayout>
</RelativeLayout>
