<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.TotalDayFragment">

    <LinearLayout
            android:id="@+id/day_and_month_car"
            style="@style/dayAndMonthLinearLayout">
        <TextView
                style="@style/dayAndMonthTextView"
                android:text="@string/car"/>
        <TextView
                android:id="@+id/day_and_month_car_textView"
                style="@style/dayAndMonthTextView"/>
    </LinearLayout>
    <LinearLayout
            android:id="@+id/day_and_month_date"
            style="@style/dayAndMonthLinearLayout"
            android:layout_below="@id/day_and_month_car">
        <TextView
                android:id="@+id/day_and_month_date_textView"
                style="@style/dayAndMonthTextViewWide"/>
    </LinearLayout>
    <LinearLayout
            android:id="@+id/day_and_month_morning_odo"
            style="@style/dayAndMonthLinearLayout"
            android:layout_below="@id/day_and_month_date">
        <TextView
                style="@style/dayAndMonthTextView"
                android:text="@string/odo_morning"/>
        <TextView
                android:id="@+id/day_and_month_morning_odo_textView"
                style="@style/dayAndMonthTextView"/>
        <TextView
                style="@style/dayAndMonthTextView"
                android:text="@string/km"/>
    </LinearLayout>
    <LinearLayout
            android:id="@+id/day_and_month_evening_odo"
            style="@style/dayAndMonthLinearLayout"
            android:layout_below="@id/day_and_month_morning_odo">
        <TextView
                style="@style/dayAndMonthTextView"
                android:text="@string/odo_evening"/>
        <TextView
                android:id="@+id/day_and_month_evening_odo_textView"
                style="@style/dayAndMonthTextView"/>
        <TextView
                style="@style/dayAndMonthTextView"
                android:text="@string/km"/>
    </LinearLayout>
    <LinearLayout
            android:id="@+id/day_and_month_morning_fuel"
            style="@style/dayAndMonthLinearLayout"
            android:layout_below="@id/day_and_month_evening_odo">
        <TextView
                style="@style/dayAndMonthTextView"
                android:text="@string/fuel_morning"/>
        <TextView
                android:id="@+id/day_and_month_morning_fuel_textView"
                style="@style/dayAndMonthTextView"/>
        <TextView
                style="@style/dayAndMonthTextView"
                android:text="@string/fuel_dividers"/>
    </LinearLayout>
    <LinearLayout
            android:id="@+id/day_and_month_evening_fuel"
            style="@style/dayAndMonthLinearLayout"
            android:layout_below="@id/day_and_month_morning_fuel">
        <TextView
                style="@style/dayAndMonthTextView"
                android:text="@string/fuel_evening"/>
        <TextView
                android:id="@+id/day_and_month_evening_fuel_textView"
                style="@style/dayAndMonthTextView"/>
        <TextView
                style="@style/dayAndMonthTextView"
                android:text="@string/fuel_dividers"/>
    </LinearLayout>
    <LinearLayout
            android:id="@+id/day_and_month_total_money"
            style="@style/dayAndMonthLinearLayout"
            android:layout_below="@id/day_and_month_evening_fuel">
        <TextView
                style="@style/dayAndMonthTextView"
                android:text="@string/totalMoney"/>
        <TextView
                android:id="@+id/day_and_month_total_money_textView"
                style="@style/dayAndMonthTextView"/>
    </LinearLayout>
    <LinearLayout
            android:id="@+id/day_and_month_logan_divider"
            style="@style/dayAndMonthLinearLayout"
            android:layout_below="@id/day_and_month_total_money">
        <TextView
                style="@style/dayAndMonthTextViewWide"
                android:text="@string/logan_divider"/>
    </LinearLayout>
    <LinearLayout
            android:id="@+id/day_and_month_logan_delivery_value"
            style="@style/dayAndMonthLinearLayout"
            android:layout_below="@id/day_and_month_logan_divider">
        <TextView
                style="@style/dayAndMonthTextView"
                android:text="@string/deliveryValue"/>
        <TextView
                android:id="@+id/day_and_month_logan_delivery_value_textView"
                style="@style/dayAndMonthTextView"/>
    </LinearLayout>
    <LinearLayout
            android:id="@+id/day_and_month_logan_money"
            style="@style/dayAndMonthLinearLayout"
            android:layout_below="@id/day_and_month_logan_delivery_value">
        <TextView
                style="@style/dayAndMonthTextView"
                android:text="@string/money"/>
        <TextView
                android:id="@+id/day_and_month_logan_money_textView"
                style="@style/dayAndMonthTextView"/>
    </LinearLayout>
    <LinearLayout
            android:id="@+id/day_and_month_logan_cash"
            style="@style/dayAndMonthLinearLayout"
            android:layout_below="@id/day_and_month_logan_money">
        <TextView
                style="@style/dayAndMonthTextView"
                android:text="@string/cash"/>
        <TextView
                android:id="@+id/day_and_month_logan_cash_textView"
                style="@style/dayAndMonthTextView"/>
    </LinearLayout>
    <LinearLayout
            android:id="@+id/day_and_month_logan_card"
            style="@style/dayAndMonthLinearLayout"
            android:layout_below="@id/day_and_month_logan_cash">
        <TextView
                style="@style/dayAndMonthTextView"
                android:text="@string/card"/>
        <TextView
                android:id="@+id/day_and_month_logan_card_textView"
                style="@style/dayAndMonthTextView"/>
    </LinearLayout>
    <LinearLayout
            android:id="@+id/day_and_month_vesta_divider"
            style="@style/dayAndMonthLinearLayout"
            android:layout_below="@id/day_and_month_logan_card">
        <TextView
                style="@style/dayAndMonthTextViewWide"
                android:text="@string/vesta_divider"/>
    </LinearLayout>
    <LinearLayout
            android:id="@+id/day_and_month_vesta_delivery_value"
            style="@style/dayAndMonthLinearLayout"
            android:layout_below="@id/day_and_month_vesta_divider">
        <TextView
                style="@style/dayAndMonthTextView"
                android:text="@string/deliveryValue"/>
        <TextView
                android:id="@+id/day_and_month_vesta_delivery_value_textView"
                style="@style/dayAndMonthTextView"/>
    </LinearLayout>
    <LinearLayout
            android:id="@+id/day_and_month_vesta_money"
            style="@style/dayAndMonthLinearLayout"
            android:layout_below="@id/day_and_month_vesta_delivery_value">
        <TextView
                style="@style/dayAndMonthTextView"
                android:text="@string/money"/>
        <TextView
                android:id="@+id/day_and_month_vesta_money_textView"
                style="@style/dayAndMonthTextView"/>
    </LinearLayout>
    <LinearLayout
            android:id="@+id/day_and_month_vesta_cash"
            style="@style/dayAndMonthLinearLayout"
            android:layout_below="@id/day_and_month_vesta_money">
        <TextView
                style="@style/dayAndMonthTextView"
                android:text="@string/cash"/>
        <TextView
                android:id="@+id/day_and_month_vesta_cash_textView"
                style="@style/dayAndMonthTextView"/>
    </LinearLayout>
    <LinearLayout
            android:id="@+id/day_and_month_vesta_card"
            style="@style/dayAndMonthLinearLayout"
            android:layout_below="@id/day_and_month_vesta_cash">
        <TextView
                style="@style/dayAndMonthTextView"
                android:text="@string/card"/>
        <TextView
                android:id="@+id/day_and_month_vesta_card_textView"
                style="@style/dayAndMonthTextView"/>
    </LinearLayout>
    <LinearLayout
            android:id="@+id/day_and_month_expenses"
            style="@style/dayAndMonthLinearLayout"
            android:layout_below="@id/day_and_month_vesta_card">
        <TextView
                style="@style/dayAndMonthTextView"
                android:text="@string/expenses"/>
        <TextView
                android:id="@+id/day_and_month_expenses_textView"
                style="@style/dayAndMonthTextView"/>
    </LinearLayout>
    <LinearLayout
            android:id="@+id/day_and_month_salary"
            style="@style/dayAndMonthLinearLayout"
            android:layout_below="@id/day_and_month_expenses">
        <TextView
                style="@style/dayAndMonthTextView"
                android:text="@string/salary"/>
        <EditText
                android:id="@+id/day_and_month_family"
                android:inputType="text"
                style="@style/dayAndMonthTextView"/>
        <TextView
                android:id="@+id/day_and_month_salary_textView"
                style="@style/dayAndMonthTextView"/>
    </LinearLayout>


</RelativeLayout>