<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        tools:context=".fragments.NewDeliveryFragment">
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
    <LinearLayout
            android:id="@+id/newDelivery_work_type"
            style="@style/newDeliveryLinearLayout">
        <TextView
                style="@style/newDeliveryTextView"
                android:text="@string/type"/>
        <Spinner
                android:id="@+id/newDelivery_work_type_spinner"
                style="@style/newDeliverySpinners"
                android:entries="@array/work_type"/>
    </LinearLayout>
    <LinearLayout
            android:id="@+id/newDelivery_delivery_type"
            style="@style/newDeliveryLinearLayout"
            android:layout_below="@id/newDelivery_work_type">
        <TextView
                style="@style/newDeliveryTextView"
                android:text="@string/whose"/>
        <Spinner
                android:id="@+id/newDelivery_delivery_type_spinner"
                style="@style/newDeliverySpinners"
                android:entries="@array/delivery_type"/>
    </LinearLayout>
    <LinearLayout
            android:id="@+id/newDelivery_pay_type"
            style="@style/newDeliveryLinearLayout"
            android:layout_below="@id/newDelivery_delivery_type">
        <TextView
                style="@style/newDeliveryTextView"
                android:text="@string/payType"/>
        <Spinner
                android:id="@+id/newDelivery_pay_type_spinner"
                style="@style/newDeliverySpinners"
                android:entries="@array/payType"/>
    </LinearLayout>
    <EditText
            android:layout_marginTop="8dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:gravity="center"
            android:textSize="20sp"
            android:inputType="text"
            android:id="@+id/newDelivery_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/address"
            android:layout_below="@id/newDelivery_pay_type"/>
    <LinearLayout
            android:id="@+id/newDelivery_cost"
            style="@style/newDeliveryLinearLayout"
            android:layout_below="@id/newDelivery_address">
        <TextView
                style="@style/newDeliveryTextView"
                android:text="@string/cost"/>
        <EditText
                android:id="@+id/newDelivery_cost_editText"
                android:gravity="center"
                android:textSize="20sp"
                android:inputType="number"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:hint="@string/cost"/>
    </LinearLayout>
    <EditText
            android:layout_marginTop="8dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:gravity="center"
            android:textSize="20sp"
            android:inputType="text"
            android:id="@+id/newDelivery_comment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/comment"
            android:layout_below="@id/newDelivery_cost"/>
    <LinearLayout
            style="@style/newDeliveryLinearLayout"
            android:gravity="center_horizontal"
            android:id="@+id/shift_button"
            android:layout_below="@id/newDelivery_comment">
        <Button
                android:id="@+id/newDelivery_write"
                android:layout_marginTop="10dp"
                android:text="@string/writeTo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
    </LinearLayout>
    </RelativeLayout>
</ScrollView>